--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2829,3 +2829,16 @@ body.is-menu-visible #menu {
   transform: translateX(0);
   box-shadow: 0 0 1.5rem 0 rgba(0, 0, 0, 0.2);
   visibility: visible; }
+
+  .nonframeworkstuff{
+    padding-top: 20px;
+    padding-bottom: 0px;
+}
+.paragraph{
+    font-size: 30px;
+}
+
+
+.fullwidth {
+  width: 100%;
+}
